--- a/main.css
+++ b/main.css
@@ -16,7 +16,6 @@
 body {
     background-color: var(--background-color);
     color: var(--text-color);
-    padding: 12px;
     align-content: center;
     text-align: center;
     vertical-align: middle;
@@ -32,11 +31,11 @@ body {
 }
 
 h1 {
-    font-size: 4vh;
+    font-size: 8vh;
 }
 
 h2 {
-    font-size: 2vh;
+    font-size: 4vh;
 }
 
 input {
@@ -44,13 +43,18 @@ input {
     background-color: white;
     border: none;
     padding: 7px;
-    font-size: 2vh;
+    font-size: 4vh;
 }
 
 button {
     background-attachment: white;
     margin: 10px;
     padding: 7px 20px;
+}
+
+a {
+    color: var(--text-color);
+    text-decoration: none;
 }
 
 .--vertical_center
@@ -66,22 +70,42 @@ button {
     -o-transform: translate(-50%, -50%);
 }
 
+.--noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+  }
+
 .header {
     width: 100%;
     height: 50px;
     background-color: #CED1CA;
     display: flex;
     flex-flow: row wrap;
-    color: red;
+    margin-bottom: 20px;
+    position: relative;
 }
 
 .header__title {
     display: flex;
+    line-height: 50px;
+    margin: 0 15px;
+    font-size: 4vh;
 }
 
 .header__navigation {
     display: flex;
-    color: red;
+    position: absolute;
+    right: 10px;
+}
+
+.header__navigation__option {
+    line-height: 50px;
+    margin: 0 10px;
 }
 
 .answer_block
