Popups have been improved

--- a/main.css
+++ b/main.css
@@ -228,40 +228,16 @@ label {
 }
 
 /* Popover styling */
-  
-  .popover__title {
+
+
+.popover__title {
     font-size: 24px;
     line-height: 36px;
     text-decoration: none;
-    color: rgb(228, 68, 68);
+    color: var(--text-color);
     text-align: center;
     padding: 15px 0;
   }
-
-  .popover__title:before {
-    content:"?";
-    position: absolute;
-    top: .25em;
-    left:0;
-    text-indent: 0;
-    display:block;
-    width:1em;
-    height: 1em;
-    padding: 5px;
-    text-align:center;
-    color: black;
-    font-weight:bold;
-    font-size:1em;
-    line-height:1em;
-    filter: brightness(150%);
-    dmargin-left: .25em;
-    border-radius: 100%;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    -ms-border-radius: 100%;
-    -o-border-radius: 100%;
-    -webkit-filter: brightness(150%);
-}
   
   .popover__wrapper {
     position: relative;
@@ -272,24 +248,19 @@ label {
     opacity: 0;
     visibility: hidden;
     position: absolute;
-    left: 0;
-    margin-top: 30px;
+    left: -150px;
     transform: translate(0, 10px);
     background-color: #bfbfbf;
     padding: 1.5rem;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-    width: 400px;
-    height: auto;
-    -webkit-transform: translate(0, 10px);
-    -moz-transform: translate(0, 10px);
-    -ms-transform: translate(0, 10px);
-    -o-transform: translate(0, 10px);
-}
+    width: auto;
+    margin-top: 20px;
+  }
   .popover__content:before {
     position: absolute;
     z-index: -1;
     content: "";
-    right: calc(95.5% - 10px);
+    right: calc(50% - 10px);
     top: -8px;
     border-style: solid;
     border-width: 0 10px 10px 10px;
@@ -307,3 +278,4 @@ label {
   .popover__message {
     text-align: center;
   }
+  
